# template-python-django

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  Makefile  Procfile.dev  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/: AGENTS.md
.github/workflows/: AGENTS.md  ci.yml
apps/: AGENTS.md
apps/auth_service/: AGENTS.md  apps.py  client.py  current.py  models.py
apps/comments/: AGENTS.md  filters.py  models.py  serializers.py  urls.py  views.py
apps/comments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_comment_deleted_at.py  0005_comment_deleted_by_cascade.py  AGENTS.md
apps/core/: AGENTS.md  apps.py  authentication.py  exceptions.py  filters.py  health.py  pagination.py  permissions.py  serializers.py  tasks.py  throttles.py  urls.py  utils.py  views.py
apps/core/auth/: AGENTS.md  __init__.py  jwt_utils.py  openapi.py  serializers.py  token_store.py  urls.py  views.py
apps/core/management/: AGENTS.md
apps/core/management/commands/: AGENTS.md  generate_resource.py  seed.py  setup_fdw.py
apps/core/middleware/: AGENTS.md  allow2ban.py  current_user.py  jwt_user.py  structured_logging.py
apps/core/mixins/: AGENTS.md  __init__.py  auto_prefetch.py  coc_serializer.py  crud_actions.py  lifecycle_hooks.py  owned_resource.py  upsert.py  user_scoped.py
apps/core/models/: AGENTS.md  __init__.py  base.py  soft_delete.py
apps/email_service/: AGENTS.md  sendgrid_service.py
apps/members/: AGENTS.md  filters.py  models.py  serializers.py  urls.py  views.py
apps/members/migrations/: 0001_initial.py  AGENTS.md
apps/posts/: AGENTS.md  filters.py  models.py  serializers.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_initial.py  0003_remove_post_unique_post_title_per_user_and_more.py  0004_post_deleted_by_cascade.py  AGENTS.md
apps/users/: AGENTS.md  filters.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py  AGENTS.md
config/: AGENTS.md  celery.py  urls.py
config/settings/: AGENTS.md  base.py  development.py  production.py  test.py
requirements/: AGENTS.md  base.txt  dev.txt  test.txt
scripts/: AGENTS.md  setup.sh
tests/: AGENTS.md  conftest.py  factories.py
tests/auth_service/: AGENTS.md  test_client.py
tests/comments/: AGENTS.md  test_api.py  test_models.py  test_validation.py
tests/core/: AGENTS.md  test_allow2ban.py  test_auth.py  test_coc_inference.py  test_crud_actions.py  test_generate_resource_soft_delete.py  test_health.py  test_hookable_serializer.py  test_make_urlpatterns.py  test_permissions.py  test_schema_snapshot.py  test_soft_delete.py  test_soft_delete_api.py  test_tasks.py  test_upsert.py
tests/members/: AGENTS.md  test_api.py  test_models.py
tests/posts/: AGENTS.md  test_api.py  test_filters.py  test_models.py  test_pagination.py  test_validation.py
tests/snapshots/: AGENTS.md  api_schema.json
tests/users/: AGENTS.md  test_api.py  test_models.py
