[project]
name = "template-python-django"
version = "0.1.0"
description = "Django REST Framework API Template with JSON:API"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<5.2",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-jsonapi>=7.0,<8.0",
    "psycopg[binary]>=3.1,<4.0",
    "django-filter>=24.0,<25.0",
    "celery>=5.4,<6.0",
    "django-celery-beat>=2.6,<3.0",
    "redis>=5.0,<6.0",
    "django-cors-headers>=4.4,<5.0",
    "django-csp>=4.0,<5.0",
    "drf-spectacular>=0.27,<1.0",
    "sentry-sdk[django]>=2.0,<3.0",
    "sendgrid>=6.11,<7.0",
    "boto3>=1.34,<2.0",
    "django-storages>=1.14,<2.0",
    "python-json-logger>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "gunicorn>=22.0,<23.0",
    "Pillow>=10.0,<11.0",
    "pytz>=2024.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4,<5.0",
    "ipython>=8.0",
    "ruff>=0.5",
    "pre-commit>=4.0",
    "honcho>=2.0",
    "django-extensions>=3.2",
    "inflect>=7.0",
]
test = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "factory-boy>=3.3,<4.0",
    "faker>=28.0,<30.0",
    "respx>=0.21,<1.0",
    "freezegun>=1.3,<2.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "*/management/*", "*/apps.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
