[project]
name = "template-python-django"
version = "0.1.0"
description = "Django REST Framework API Template with JSON:API"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<5.2",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-jsonapi>=7.0,<8.0",
    "psycopg[binary]>=3.1,<4.0",
    "django-filter>=24.0,<25.0",
    "celery>=5.4,<6.0",
    "django-celery-beat>=2.6,<3.0",
    "redis>=5.0,<6.0",
    "django-cors-headers>=4.4,<5.0",
    "django-csp>=4.0,<5.0",
    "drf-spectacular>=0.27,<1.0",
    "sentry-sdk[django]>=2.0,<3.0",
    "boto3>=1.34,<2.0",
    "django-storages>=1.14,<2.0",
    "python-json-logger>=2.0,<3.0",
    "django-ipware>=6.0,<7.0",
    "django-structlog>=8.0,<9.0",
    "python-dotenv>=1.0,<2.0",
    "gunicorn>=22.0,<23.0",
    "Pillow>=10.0,<11.0",
    "pytz>=2024.1",
    "PyJWT>=2.8,<3.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4,<5.0",
    "ipython>=8.0",
    "ruff>=0.5",
    "pre-commit>=4.0",
    "honcho>=2.0",
    "django-extensions>=3.2",
    "inflect>=7.0",
]
test = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-xdist>=3.5,<4.0",
    "factory-boy>=3.3,<4.0",
    "faker>=28.0,<30.0",
    "respx>=0.21,<1.0",
    "freezegun>=1.3,<2.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DJ",     # flake8-django
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "PT",     # flake8-pytest-style
    "T20",    # flake8-print
    "PIE",    # flake8-pie
    "DTZ",    # flake8-datetimez
    "C90",    # mccabe complexity
]
ignore = [
    "RUF012",  # mutable-class-default — Django models require mutable class variables
    "DJ001",   # nullable CharField — sometimes needed for optional unique fields
    "UP031",   # printf-string-formatting — logger uses %-formatting by convention
    "N818",    # exception naming — NotFound is established public API name
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S101", "S106", "T20", "DTZ"]
"*/migrations/*" = ["E501", "N", "UP"]
"config/settings/*" = ["E501"]
"manage.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert used in tests

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -n auto"
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "*/management/*", "*/apps.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
